# heros-initiative-backend

./: .gitignore  .replit  AGENTS.md  CLAUDE.md  Model service  README.md  main.py  map_preview.html  notion_updater.py  pyproject.toml  replit.md  road_segments_mapping.xlsx  road_segments_mapping_v2.xlsx
.beads/: issues.jsonl  metadata.json
app/api/: routes.py
app/core/: config.py
app/ml/: model_service.py
app/models/: schemas.py
app/pipeline/: data_pipeline.py
data/models/: xgboost_congestion.pkl
data/raw/: traffic_20260410_203814.json  traffic_20260410_204435.json
data/synthetic/: generator.py
tools/: gen_mapping_xlsx.py  map_preview.py
