[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Hero's Initiative — AI-Powered Traffic Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "shap>=0.46.0",
    "supabase>=2.15.0",
    "uvicorn[standard]>=0.44.0",
    "xgboost>=2.1.0",
]
